--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
          - 9010:9000
       volumes:
          - hadoop_namenode:/hadoop/dfs/name
+         - ./data:/data
       environment:
          - CLUSTER_NAME=test
          - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
