--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,12 +66,16 @@ services:
       depends_on:
          - namenode
          - datanode
+         - hive-server
+         - mongodb
       ports:
          - "8080:8080"
          - "7077:7077"
       environment:
          - INIT_DAEMON_STEP=setup_spark
          - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+      volumes:
+         - ./jars:/opt/spark/jars
 
    spark-worker-1:
       image: bde2020/spark-worker:3.0.0-hadoop3.2
@@ -83,6 +87,8 @@ services:
       environment:
          - "SPARK_MASTER=spark://spark-master:7077"
          - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+      volumes:
+         - ./jars:/opt/spark/jars
 
    hive-server:
       image: bde2020/hive:2.3.2-postgresql-metastore
@@ -90,6 +96,7 @@ services:
       depends_on:
          - namenode
          - datanode
+         - mongodb
       env_file:
          - ./hadoop-hive.env
       environment:
@@ -140,19 +147,18 @@ services:
    #       - mongodb
 
    # Serveur Cassandra pour le stockage NoSQL
-   # cassandra:
-   #    image: cassandra:latest
-   #    container_name: cassandraa
-   #    restart: always
-   #    environment:
-   #       CASSANDRA_CLUSTER_NAME: "Test Cluster"
-   #       CASSANDRA_NUM_TOKENS: "256"
-   #       CASSANDRA_SEEDS: "cassandraa"
-   #    ports:
-   #       - "9042:9042" # Port pour CQL (Cassandra Query Language)
-   #    volumes:
-   #       - cassandra_data:/var/lib/cassandraa
-   #       - ./data:/data # Monté à partir du dossier actuel
+   cassandra:
+      image: cassandra:latest
+      container_name: cassandraa
+      restart: always
+      environment:
+         - CASSANDRA_CLUSTER_NAME=Test Cluster
+         - CASSANDRA_NUM_TOKENS=256
+         - CASSANDRA_SEEDS=cassandraa
+      ports:
+         - "9042:9042" # Port pour CQL (Cassandra Query Language)
+      volumes:
+         - cassandra_data:/var/lib/cassandra
 
 volumes:
    hadoop_namenode:
