--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
          - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
       volumes:
          - ./jars:/opt/spark/jars
+         - ./app/mongo/spark.py:/spark_mongo.py
 
    spark-worker-1:
       image: bde2020/spark-worker:3.0.0-hadoop3.2
