--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 env
 /env
 *.pyc
+/.idea/.gitignore
+/.idea/docker-hadoop-tp.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
