--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ env
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
+/app/*/__pycache__
