--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,7 @@ services:
       ports:
          - "8888:8888"
       environment:
+         # - JUPYTER_TOKEN=
          - SPARK_MASTER=spark://spark-master:7077
          - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
       volumes:
